Phase 4.2: Added analytics part for repos